<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_people"/>

    <TextView
        android:id="@+id/as_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sa_second_activity" />

    <EditText
        android:id="@+id/as_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/as_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sa_go_back" />

    <Button
        android:id="@+id/as_third_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sa_go_to_third" />

    <fragment
        android:id="@+id/as_nav_host"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:defaultNavHost="true"
        app:navGraph="@navigation/second" />

</LinearLayout>